# IFEM-OpenFrac

./: CHMaterial.C  CHMaterial.h  CMakeLists.txt  CahnHilliard.C  CahnHilliard.h  CubicMinimum.C  CubicMinimum.h  FractureArgs.C  FractureArgs.h  FractureElasticity.C  FractureElasticity.h  FractureElasticityMonol.C  FractureElasticityMonol.h  FractureElasticityVoigt.C  FractureElasticityVoigt.h  HermiteInterpolator.C  HermiteInterpolator.h  PoroFracture.C  PoroFracture.h  QuasiStaticSIM.C  QuasiStaticSIM.h  README.md  SIMCH.h  SIMDriver.h  SIMDynElasticity.C  SIMDynElasticity.h  SIMElasticityWrap.h  SIMExplPhaseField.C  SIMExplPhaseField.h  SIMFractureDynamics.C  SIMFractureDynamics.h  SIMFractureQstatic.C  SIMFractureQstatic.h  SIMPhaseField.C  SIMPhaseField.h  main_CahnHilliard.C  main_FractureDynamics.C  runTimeInt.h
Test/: Miehe51-p1.xinp  Miehe71-explcrack-mixed_FDporo.reg  Miehe71-explcrack_FD.reg  Miehe71-explcrack_FDporo.reg  Miehe71-lstatic_FD.reg  Miehe71-lstatic_FDporo.reg  Miehe71-mixed_FDporo.reg  Miehe71-nocrack-mixed_FDporo.reg  Miehe71-nocrack_FD.reg  Miehe71-nocrack_FDporo.reg  Miehe71.xinp  Miehe71_FD.reg  Miehe71_FDporo.reg  Miehe71_restart.reg  Miehe71_restart_poro.reg  Rectangle-p1.xinp  Rectangle-p2.xinp  Rectangle-p2_CH.hreg  Rectangle-p2_CH.reg  Rectangle-p2_CH.xinp  Rectangle-p2_penalty_CH.reg  Rectangle-p2_penalty_CH.xinp  RectangleCrack.xinp  Short10x20-adap_FD.reg  Short10x20-p1-adap-restart.reg  Short10x20-p1-adap.hreg  Short10x20-p1-adap.vreg  Short10x20-p1-adap.xinp  Short10x20-p1-preref.xinp  Short10x20-p1.xinp  Short10x20-preref_FD.reg  Short10x20_FD.reg  Sneddon-200_FD.hreg  Sneddon-200_FD.reg  Sneddon-200_FD.xinp  Sneddon-unit.xinp  Sneddon-unit_FDporo.reg  Square-slit-p2.xinp  TestCubicMinimum.C  TestFractureElasticity.C  (+10 more)
Test/MPI/: Short10x20-p1-adap-restart.reg
doc/: Doxyfile.in  FractureDynamics.dox.in  Staggered.bbl  Staggered.tex
jenkins/: build.sh
